Feat: 操作页面改为中文，测试二买，三买已经有数据了，针对aol9
